[gd_scene load_steps=3 format=3 uid="uid://c42h64jykpu14"]

[ext_resource type="Script" uid="uid://8ewm2h56wdfx" path="res://scenes/Menus/Options/options_menu.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://bxlt2ju7qgrqv" path="res://theme.tres" id="2_theme"]

[node name="OptionsMenu" type="Control" node_paths=PackedStringArray("resolution_dropdown", "fullscreen_checkbox", "vsync_checkbox", "apply_button", "reset_button", "back_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")
resolution_dropdown = NodePath("CenterContainer/VBoxContainer/SettingsContainer/DisplaySection/ResolutionContainer/ResolutionDropdown")
fullscreen_checkbox = NodePath("CenterContainer/VBoxContainer/SettingsContainer/DisplaySection/FullscreenCheckbox")
vsync_checkbox = NodePath("CenterContainer/VBoxContainer/SettingsContainer/DisplaySection/VsyncCheckbox")
apply_button = NodePath("CenterContainer/VBoxContainer/ButtonContainer/ApplyButton")
reset_button = NodePath("CenterContainer/VBoxContainer/ButtonContainer/ResetButton")
back_button = NodePath("CenterContainer/VBoxContainer/ButtonContainer/BackButton")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.3, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DisplaySection" type="VBoxContainer" parent="CenterContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2

[node name="DisplayLabel" type="Label" parent="CenterContainer/VBoxContainer/SettingsContainer/DisplaySection"]
layout_mode = 2
text = "Display Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer/SettingsContainer/DisplaySection"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResolutionContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsContainer/DisplaySection"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="CenterContainer/VBoxContainer/SettingsContainer/DisplaySection/ResolutionContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Resolution:"
vertical_alignment = 1

[node name="ResolutionDropdown" type="OptionButton" parent="CenterContainer/VBoxContainer/SettingsContainer/DisplaySection/ResolutionContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 3

[node name="FullscreenContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsContainer/DisplaySection"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="CenterContainer/VBoxContainer/SettingsContainer/DisplaySection/FullscreenContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Fullscreen:"
vertical_alignment = 1

[node name="FullscreenCheckbox" type="CheckBox" parent="CenterContainer/VBoxContainer/SettingsContainer/DisplaySection"]
layout_mode = 2
text = "Enable Fullscreen"

[node name="VsyncContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsContainer/DisplaySection"]
layout_mode = 2

[node name="VsyncLabel" type="Label" parent="CenterContainer/VBoxContainer/SettingsContainer/DisplaySection/VsyncContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "V-Sync:"
vertical_alignment = 1

[node name="VsyncCheckbox" type="CheckBox" parent="CenterContainer/VBoxContainer/SettingsContainer/DisplaySection"]
layout_mode = 2
text = "Enable V-Sync"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ApplyButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Apply"

[node name="ResetButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Reset"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Back"
